--- a/result/2021-12-21.md
+++ b/result/2021-12-21.md
@@ -54,3 +54,4 @@
 54. [官方回应充气城堡被吹翻多名儿童摔伤](https://s.weibo.com//weibo?q=%23%E5%AE%98%E6%96%B9%E5%9B%9E%E5%BA%94%E5%85%85%E6%B0%94%E5%9F%8E%E5%A0%A1%E8%A2%AB%E5%90%B9%E7%BF%BB%E5%A4%9A%E5%90%8D%E5%84%BF%E7%AB%A5%E6%91%94%E4%BC%A4%23&Refer=top) 144971
 55. [被奶奶煮的面整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E5%A5%B6%E5%A5%B6%E7%85%AE%E7%9A%84%E9%9D%A2%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 144331
 56. [无名的人啊我敬你一杯酒](https://s.weibo.com//weibo?q=%E6%97%A0%E5%90%8D%E7%9A%84%E4%BA%BA%E5%95%8A%E6%88%91%E6%95%AC%E4%BD%A0%E4%B8%80%E6%9D%AF%E9%85%92&Refer=top) 132450
+57. [薇娅直播间](https://s.weibo.com//weibo?q=%23%E8%96%87%E5%A8%85%E7%9B%B4%E6%92%AD%E9%97%B4%23&Refer=top) 24881
