--- a/result/2021-12-21.md
+++ b/result/2021-12-21.md
@@ -55,3 +55,4 @@
 55. [被奶奶煮的面整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E5%A5%B6%E5%A5%B6%E7%85%AE%E7%9A%84%E9%9D%A2%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 144331
 56. [无名的人啊我敬你一杯酒](https://s.weibo.com//weibo?q=%E6%97%A0%E5%90%8D%E7%9A%84%E4%BA%BA%E5%95%8A%E6%88%91%E6%95%AC%E4%BD%A0%E4%B8%80%E6%9D%AF%E9%85%92&Refer=top) 132450
 57. [薇娅直播间](https://s.weibo.com//weibo?q=%23%E8%96%87%E5%A8%85%E7%9B%B4%E6%92%AD%E9%97%B4%23&Refer=top) 28732
+58. [金晨王安宇晒腹肌官宣新剧](https://s.weibo.com//weibo?q=%23%E9%87%91%E6%99%A8%E7%8E%8B%E5%AE%89%E5%AE%87%E6%99%92%E8%85%B9%E8%82%8C%E5%AE%98%E5%AE%A3%E6%96%B0%E5%89%A7%23&Refer=top) 21997
